[package]
name = "toml-comment-derive"
description = "Proc-macro internals for toml-comment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["toml", "comments", "config", "derive", "serde"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
